--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "php": ">=5.3.3",
         "zendframework/zend-eventmanager": "2.0.*",
         "zendframework/zend-http": "2.0.*",
+        "zendframework/zend-i18n": "2.0.*",
         "zendframework/zend-log": "2.0.*",
         "zendframework/zend-mvc": "2.0.*",
         "phly/mustache": ">=1.2.0"
