--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
         "zendframework/zend-i18n": "2.0.*",
         "zendframework/zend-log": "2.0.*",
         "zendframework/zend-mvc": "2.0.*",
+        "zendframework/zend-session": "2.0.*",
         "phly/mustache": ">=1.2.0"
     },
     "autoload": {
